--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "send": "^0.16.2",
-    "jose":"^2.0.0"
+    "jose":"^2.0.0",
+    "log4js":"^6.0.0"
   },
   "devDependencies": {
     "debug": "^4.1.1"
