--- a/.github/workflows/frogbot-scan-and-fix.yml
+++ b/.github/workflows/frogbot-scan-and-fix.yml
@@ -66,4 +66,4 @@ jobs:
           # Frogbot will download the project dependencies, if they're not cached locally. To download the
           # dependencies from a virtual repository in Artifactory, set the name of of the repository. There's no
           # need to set this value, if it is set in the frogbot-config.yml file.
-          # JF_DEPS_REPO: ""
+          JF_DEPS_REPO: "npm-npm"
