--- a/.github/workflows/frogbot-scan-and-fix.yml
+++ b/.github/workflows/frogbot-scan-and-fix.yml
@@ -71,4 +71,5 @@ jobs:
           # dependencies from a virtual repository in Artifactory, set the name of of the repository. There's no
           # need to set this value, if it is set in the frogbot-config.yml file.
           JF_DEPS_REPO: "npm-npm"
-          JF_WATCHES: hogwatch
+          JF_WATCHES: "hogwatch"
+          JF_FAIL: "TRUE"
