--- a/.github/workflows/frogbot-scan-and-fix.yml
+++ b/.github/workflows/frogbot-scan-and-fix.yml
@@ -2,6 +2,10 @@ name: "Frogbot Scan Pull Request"
 on:
   pull_request_target:
     types: [opened, synchronize]
+  push:
+    branches:
+      - "main"
+      - "master"
 permissions:
   pull-requests: write
   contents: read
