--- a/.github/workflows/frogbot-scan-and-fix.yml
+++ b/.github/workflows/frogbot-scan-and-fix.yml
@@ -14,6 +14,7 @@ jobs:
     # "frogbot" GitHub environment can approve the pull request to be scanned.
     environment: frogbot
     steps:
+      - uses: actions/checkout@v4
       - uses: jfrog/frogbot@v2
         env:
           # [Mandatory]
